# learning_opengl

./: .gitignore
070going3d/: build.sh
070going3d/shaders/: basic_3d_shader.glsl
070going3d/src/: application.cc  camera.cc  std.h  texture.cc
080camera/: CMakeLists.txt
080camera/src/: application.cc  camera.cc  vertex_array.cc  vertex_buffer.cc  vertex_buffer.supported_types.cc
081camera/: .clangd  CMakeLists.txt  build.sh
081camera/notes/: notes.md
081camera/shaders/: basic_3d_shader.glsl
081camera/src/: application.cc  camera.cc  index_buffer.cc  mouse.cc  shader_program.cc  texture.cc  timer.cc
090lighting/: build.sh
090lighting/shaders/: light_cube.glsl  pyramid.glsl
090lighting/src/: application.cc  camera.cc  shader_program.cc  texture.cc  vertex_array.cc
100specularlight/: build.sh
100specularlight/notes/: notes.md
110mesh/: CMakeLists.txt  build.sh
110mesh/src/: std.h  (+10 more)
120model/: .gitignore  CMakeLists.txt
121model/: CMakeLists.txt  build.sh
140stencil/: CMakeLists.txt
140stencil/shaders/: model_with_light.glsl  single_color.glsl
140stencil/shaders/std/: branching.glsl
140stencil/src/: application.cc  mesh.cc  shader_program.cc  vertex_buffer.cc
170new/: CMakeLists.txt  build.sh
170new/.cache/clangd/index/: application.cc.E87B98298C09AA31.idx  camera.cc.29011E1D0A5617DF.idx  index_buffer.cc.F2777108A766847D.idx  main.cpp.3B3849AAE79D4DF2.idx  mesh.cc.40742026061D6D98.idx  model.cc.E9FC69C7AEC3D755.idx  mouse.cc.211DB52B266C109B.idx  shader_program.cc.7453781EF0564EC2.idx  stb_image.cpp.F98D8544C7AFD3BD.idx  stb_image.h.FF9CB425400E0119.idx  std.cpp.C719F60A25C5F618.idx  std.h.EF09A4A8C84D3D21.idx  texture.cc.CD733DEAE84198C2.idx  timer.cc.2D58EF006BBB9947.idx  transformation.cc.E05D52DC3ADADDCD.idx  vertex_array.cc.A531AEA75F7271EE.idx  vertex_buffer.cc.79C424F64A69062E.idx  vertex_buffer.layout.cc.E6D7346A19AEF236.idx  vertex_buffer.supported_types.cc.99E03CE0D9CACED1.idx  vertex_buffer.vertex_struct.cc.F27DA1F3F7E8EF55.idx
170new/notes/: notes.md
170new/shaders/: screen.glsl  skybox.glsl
170new/shaders/std/: lighting.glsl  material.glsl
170new/src/: application.cc  camera.cc  frame_buffer.cc  main.cpp  mesh.cc  model.cc  shader_program.cc  skybox.cc  std.h  texture.cc  transformation.cc  vertex_array.cc  vertex_buffer.cc  vertex_buffer.layout.cc  vertex_buffer.supported_types.cc
(+97 files in other folders)
